# ycm.nvim

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
lua/: ycm.lua
lua/ycm/: autocmd.lua
plugin/: ycm.vim
queries/cpp/: completion.scm
src/: main.cpp
